# remilia-wikitool

./: .contextmink.toml  .env.template  .gitignore  .stylelintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE_LOG.md  SETUP.md  VERSIONING.md  biome.json  package.json  tsconfig.json
crates/wikitool/: Cargo.toml
crates/wikitool/src/: article_cli.rs  briefs.rs  cli_support.rs  config_cli.rs  contextmink_cli.rs  contracts_cli.rs  db_cli.rs  dev_cli.rs  docs_cli.rs  export_cli.rs  guidance_contracts.rs  import_cli.rs  index_cli.rs  inspect_cli.rs  knowledge_cli.rs  knowledge_inspect_cli.rs  lsp_cli.rs  main.rs  module_cli.rs  ops_cli.rs  quality_cli.rs  query_cli.rs  release.rs  research_cli.rs  review_cli.rs  sync_cli.rs  templates_cli.rs  wiki_cli.rs  workflow_cli.rs
crates/wikitool/src/article_cli/: fix.rs  lint.rs  output.rs  promote.rs  selection.rs  tests.rs
crates/wikitool/src/docs_cli/: admin.rs  audit.rs  import.rs  mod.rs  query.rs  reference.rs
crates/wikitool/src/export_cli/: batch.rs  mod.rs  render.rs  subpages.rs
crates/wikitool/src/knowledge_cli/: article_start.rs  build.rs  contracts.rs  interview.rs  pack.rs  shared.rs  status.rs  warm.rs
crates/wikitool/src/knowledge_inspect_cli/: backlinks.rs  chunks.rs  pages.rs  references.rs  templates.rs
crates/wikitool/src/release/: ai_pack.rs  bundle.rs
crates/wikitool/src/research_cli/: mediawiki_templates.rs  session.rs
crates/wikitool/src/review_cli/: checks.rs  draft.rs  next_steps.rs  output.rs  selection.rs  tests.rs  workflow.rs
crates/wikitool/src/sync_cli/: delete.rs  diff.rs  init.rs  pull.rs  push.rs  shared.rs  status.rs
crates/wikitool/src/wiki_cli/: capabilities.rs  cargo.rs  output.rs  profile.rs  rules.rs  summary.rs  surface.rs  tests.rs
crates/wikitool_core/: Cargo.toml
crates/wikitool_core/src/: config.rs  contracts.rs  delete.rs  docs.rs  external.rs  filesystem.rs  fts.rs  import_cargo.rs  index.rs  inspect.rs  knowledge_interview.rs  lib.rs  lint.rs  migrate.rs  phase0.rs  phase1.rs  phase2.rs  phase3.rs  phase6.rs  runtime.rs  schema.rs  schema.sql  support.rs  sync.rs  title_variants.rs
crates/wikitool_core/src/article_lint/: document.rs  fix.rs  mod.rs  model.rs  resources.rs  tests.rs
crates/wikitool_core/src/authoring/: article_start.rs  classify.rs  comparables.rs  contract_traversal.rs  contracts.rs  docs_bridge.rs  mod.rs  model.rs  suggestions.rs  topic_assessment.rs
crates/wikitool_core/src/content_store/: mod.rs  model.rs  parsing.rs  storage.rs
crates/wikitool_core/src/docs/: catalog.rs  fetch.rs  import.rs  mod.rs  model.rs  parse.rs  parse_common.rs  parse_examples.rs  parse_markup.rs  parse_sections.rs  parse_symbols.rs  persist.rs  profiles.rs  query.rs  query_common.rs  query_context.rs  query_search.rs  structured.rs  support.rs  tests.rs
crates/wikitool_core/src/filesystem/: tests.rs
crates/wikitool_core/src/graph/: build.rs  condensation.rs  filters.rs  mod.rs  model.rs  scc.rs
crates/wikitool_core/src/index/: authoring.rs  ingest.rs  model.rs  parsing.rs  references.rs  retrieval.rs  storage.rs  templates.rs  tests.rs  validation.rs
crates/wikitool_core/src/knowledge/: authoring.rs  content_index.rs  docs_bridge.rs  inspect.rs  mod.rs  model.rs  prelude.rs  references.rs  retrieval.rs  status.rs  templates.rs  tests.rs
crates/wikitool_core/src/migrations/: v001_baseline.sql  v002_indexes.sql  v003_fts5.sql  v004_template_categories.sql  v005_ai_context_cache.sql  (+4 more)
tools/contextmink/: CHANGELOG.md  Cargo.toml  README.md  SETUP.md
tools/contextmink/docs/: setup.md
tools/contextmink/src/: capture.rs  cli.rs  commands.rs  config.rs  encoding.rs  files.rs  grep_scan.rs  json_tools.rs  main.rs  outline.rs  sqlite.rs  tests.rs  text.rs
tools/contextmink/templates/: .contextmink.toml  AGENTS.contextmink.md
tools/contextmink/tests/: bridge_bin.rs  cli_receipts.rs  templates.rs
(+257 files in other folders)
