[workspace]
members = [
  "crates/wikitool",
  "crates/wikitool_core",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.60", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "cookies", "form", "json", "query", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sha2 = "0.10.9"
walkdir = "2.5.0"
toml = "0.8"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
