[package]
name = "wikitool"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
maintainer = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zip.workspace = true
wikitool_core = { path = "../wikitool_core" }
