[package]
name = "wikitool_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3.25.0"
