[package]
name = "wikitool_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
full_moon.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
selene-lib.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
similar.workspace = true
sha2.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3.25.0"
